<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tab_recipe_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/spacing_normal_600"
        android:paddingVertical="@dimen/spacing_large_100">

        <ImageView
            android:id="@+id/imageView_recipe_servings"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/spacing_normal_600"
            android:src="@drawable/ic_people"
            app:layout_constraintEnd_toStartOf="@id/textView_recipe_servings"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_recipe_servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small_400"
            android:layout_marginTop="@dimen/spacing_normal_600"
            android:layout_marginEnd="@dimen/spacing_normal_600"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal_200"
            app:layout_constraintEnd_toStartOf="@id/imageView_recipe_time"
            app:layout_constraintStart_toEndOf="@id/imageView_recipe_servings"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2" />

        <ImageView
            android:id="@+id/imageView_recipe_time"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/spacing_small_800"
            android:layout_marginTop="@dimen/spacing_normal_600"
            android:src="@drawable/ic_clock"
            app:layout_constraintEnd_toStartOf="@id/textView_recipe_time"
            app:layout_constraintStart_toEndOf="@id/textView_recipe_servings"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_recipe_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small_400"
            android:layout_marginTop="@dimen/spacing_normal_600"
            android:layout_marginEnd="@dimen/spacing_normal_600"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal_200"
            app:layout_constraintEnd_toStartOf="@id/imageView_recipe_rating"
            app:layout_constraintStart_toEndOf="@id/imageView_recipe_time"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="30 min." />

        <ImageView
            android:id="@+id/imageView_recipe_rating"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/spacing_normal_400"
            android:layout_marginEnd="@dimen/spacing_small_200"
            android:src="@drawable/ic_star"
            app:layout_constraintEnd_toStartOf="@id/textView_recipe_rating"
            app:layout_constraintStart_toEndOf="@id/textView_recipe_time"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView_recipe_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal_600"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageView_recipe_rating"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="4.3" />

        <TextView
            android:id="@+id/textView_nutritional_information_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large_100"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/nutrition_per_serving"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_recipe_rating" />

        <TextView
            android:id="@+id/textView_no_nutritional_information_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_small_600"
            android:layout_marginTop="@dimen/spacing_normal_600"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/no_nutritional_information_available"
            android:textColor="@color/orange_outrageous"
            android:textSize="@dimen/text_size_headline_1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_nutritional_information_title" />


        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexbox_nutritional_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_normal_600"
            app:alignContent="center"
            app:alignItems="center"
            app:flexWrap="wrap"
            app:justifyContent="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_nutritional_information_title">

            <TextView
                android:id="@+id/textView_nutritional_information_1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/border_dashed"
                android:gravity="center"
                android:textColor="@color/black"
                tools:text="Cal.\n 223" />

            <TextView
                android:id="@+id/textView_nutritional_information_2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/border_dashed"
                android:gravity="center"
                android:textColor="@color/black"
                tools:text="Cal.\n 223" />


            <TextView
                android:id="@+id/textView_nutritional_information_3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/border_dashed"
                android:gravity="center"
                android:textColor="@color/black"
                tools:text="Cal.\n 223" />


            <TextView
                android:id="@+id/textView_nutritional_information_4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/border_dashed"
                android:gravity="center"
                android:textColor="@color/black"
                tools:text="Cal.\n 223" />


            <TextView
                android:id="@+id/textView_nutritional_information_5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/border_dashed"
                android:gravity="center"
                android:textColor="@color/black"
                tools:text="Cal.\n 223" />


            <TextView
                android:id="@+id/textView_nutritional_information_6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/border_dashed"
                android:gravity="center"
                android:textColor="@color/black"
                tools:text="Cal.\n 223" />


            <TextView
                android:id="@+id/textView_nutritional_information_7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/border_dashed"
                android:gravity="center"
                android:textColor="@color/black"
                tools:text="Cal.\n 223" />


        </com.google.android.flexbox.FlexboxLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="textView_no_nutritional_information_available,flexbox_nutritional_information" />

        <TextView
            android:id="@+id/textView_recommended_side_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large_100"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/recommended_side_dish"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large_100"
            android:layout_marginVertical="@dimen/spacing_normal_600"
            android:backgroundTint="@color/green_sushi"
            android:elevation="@dimen/elevation_card_small_100"
            app:cardCornerRadius="@dimen/radius_background_small_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_recommended_side_dish">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_large_100">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView_side_recipe"
                    android:layout_width="@dimen/width_card_normal_100"
                    android:layout_height="@dimen/height_card_normal_100"
                    android:src="@drawable/ic_default_side_recipe"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:strokeColor="@color/orange_outrageous"
                    app:strokeWidth="1dp" />

                <TextView
                    android:id="@+id/textView_recommended_side_dish_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_large_100"

                    android:layout_marginTop="@dimen/spacing_large_100"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_side_recipe"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Parmesan-Pea Crostini" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal_200"
                    android:text="@string/see_more"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageView_side_recipe"
                    app:layout_constraintTop_toBottomOf="@id/textView_recommended_side_dish_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>